Changed the Fixed menu, main-area, right-area margins to align

--- a/Templates-Client-Proto/css/proto-site-styles.css
+++ b/Templates-Client-Proto/css/proto-site-styles.css
@@ -16,7 +16,7 @@
 		float:left;
 		//background:#cdc;
 		padding-bottom:10px;
-		margin-top:1%;
+		margin-top:0.2%;
 		}
 	
 	#main-area {
@@ -25,7 +25,7 @@
 		//background:#dcd;
 		padding-bottom:10px;
 		margin:1%;
-		margin-top:1.8%;
+		margin-top:1%;
 		}
 	
 	#left-area {
@@ -33,7 +33,7 @@
 		float:left;
 		//background:#ccd;
 		padding-bottom:10px;
-		margin-top:1%;
+		margin-top:0.8%;
 		}
 		
 	h1 {
@@ -65,7 +65,7 @@
 	  left: 3%;
 	  top: 20%;
 	  width: 11.5em;
-	  margin-top: -3.4%;
+	  margin-top: -0.6%;
 	}
 	
 	#right-area .nav {
